@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2003/08/11 14:56:54 drochner Exp $
-
-SHA1 (email-2.5.tar.gz) = e6c4ea7b08df55fdcbd09e915433b12fd62bf95d
-RMD160 (email-2.5.tar.gz) = ffeecd0dcd6f8d4ed7163e67ba6f45af0dc2390b
-Size (email-2.5.tar.gz) = 1194582 bytes
